Fixed extra space in right side of Mobile

--- a/styles/global.css
+++ b/styles/global.css
@@ -11,9 +11,11 @@ body {
   background: #909863;
 }
 
-* {
+/*Este codigo estaba haciendo que apareciera espacio verde en Movil
+/* *{
   /*box-sizing: border-box;*/
-}
+/*} */
+
 
 .Welcome {
   
